# nfl-tui

./: Cargo.toml  README.md  espn_data.json
src/: data.rs  main.rs  model.rs
