[package]
name = "nfl-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
chrono = "0.4.39"
tui-big-text = "0.7.0"
image = "0.25.5"
clap = { version = "4.5.23", features = ["derive"] }
